--- a/day02/basic_css/basic_css.css
+++ b/day02/basic_css/basic_css.css
@@ -2,14 +2,39 @@
 h1{
     background-color: green; /*배경색*/
     color:white; /*글씨색*/
+    font-size: 20px;
 }
 
 h2{
     background-color: black;
     color: red;
+    font-size: 20px;
 }
 
 h3{
     background-color: navy;
     color: white;
+    font-size: 20px;
+}
+
+a{
+    background-color: pink;
+}
+
+/* div{
+    background-color: yellow;
+}
+
+span{
+    background-color: skyblue;
+} */
+
+div{
+    background-color: black;
+    color: white;
+    text-align: center;
+    width: 400px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
 }
