--- a/day02/pills/pills.css
+++ b/day02/pills/pills.css
@@ -1,106 +1,25 @@
 .whole{
-    background-color: blue;
+    background-color: #0078ff;
     color: white;
     text-align: center;
-    font-weight: 800;
+    font-size: 13px;
+    font-weight: 600;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 15px;
     padding-right: 15px;
-    border: 1px solid blue;
-    border-radius: 20px;
+    border: 1px solid #0078ff;
+    border-radius: 100px;
     margin-right: 15px;
 }
 
-.motel{
-    background-color: white;
-    color: black;
-    text-align: center;
-    font-weight: 800;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border: 1px solid #c9c9c9;
-    border-radius: 20px;
-    margin-right: 15px;
-}
-
-.hotel{
-    background-color: white;
-    color: black;
-    text-align: center;
-    font-weight: 800;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border: 1px solid #c9c9c9;
-    border-radius: 20px;
-    margin-right: 15px;
-}
-.pension{
-    background-color: white;
-    color: black;
-    text-align: center;
-    font-weight: 800;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border: 1px solid #c9c9c9;
-    border-radius: 20px;
-    margin-right: 15px;
-}
-.premium{
-    background-color: white;
-    color: black;
-    text-align: center;
-    font-weight: 800;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border: 1px solid #c9c9c9;
-    border-radius: 20px;
-    margin-right: 15px;
-}
-.camping{
-    background-color: white;
-    color: black;
-    text-align: center;
-    font-weight: 800;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border: 1px solid #c9c9c9;
-    border-radius: 20px;
-    margin-right: 15px;
-}
-.home{
-    background-color: white;
-    color: black;
-    text-align: center;
-    font-weight: 800;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border: 1px solid #c9c9c9;
-    border-radius: 20px;
-    margin-right: 15px;
-}
-.guest{
-    background-color: white;
-    color: black;
-    text-align: center;
-    font-weight: 800;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border: 1px solid #c9c9c9;
-    border-radius: 20px;
-    margin-right: 15px;
+.pill_{
+    border: 1px soild #ebebeb;
+    border-radius: 100px;
+    padding-top:8px;
+    padding-bottom:8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    font-size: 13px;
+    font-weight: 600;
 }
