--- a/day02/round_button/round_botton.css
+++ b/day02/round_button/round_botton.css
@@ -1,47 +1,30 @@
-/* .mail{
-    border-radius: 20px;
-    background-color: rgb(52, 149, 240);
-    color: white;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 10px;
-    padding-right: 6px;
-    margin-right: 8px;
-}
-.apple_{
-    border-radius: 20px;
-    background-color: black;
-    color: white;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 13px;
-    padding-right: 13px;
-} */
-.button_layout{
-    padding-top: 10px;
-}
-.button{
-    background-color: skyblue;
-    color: white;
-    padding: 14px;
-    /* 50%: 둥글게 */
-    border-radius: 50%;
+.button_layout {
+  padding-top: 5px;
+  display: flex;
 }
 
-.email{
-    color: white;
-    font-size: 20px;
+.button {
+  display: flex;
+  /* 중앙화 시켜주는 CSS */
+  justify-content: center;
+  align-items: center;
+
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.email {
+  color: white;
 }
 
-.abutton{
-    background-color: black;
-    color: white;
-    padding: 15px;
-    /* 50%: 둥글게 */
-    border-radius: 50%;
+.apple {
+  color: white;
 }
 
-.apple{
-    color: white;
-    font-size: 20px;
+.sky {
+  background-color: skyblue;
+}
+
+.black {
+  background-color: black;
 }
