--- a/day05/ediya/ediya.css
+++ b/day05/ediya/ediya.css
@@ -1,18 +1,19 @@
 .bigCard {
-  width: fit-content;
-  height: fit-content;
-  padding: 10px;
   display: flex;
   gap: 10px;
 }
 
 .card {
   width: 200px;
+  height: 450px;
+
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   cursor: pointer;
   background-color: lightgray;
+  position: relative;
 }
 
 .ImageBox {
@@ -46,4 +47,21 @@
   color: white;
   padding: 2px;
   margin: 10px;
+}
+
+.mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  opacity: 0;
+}
+
+.card:hover .mask {
+  opacity: 0.8;
 }
