--- a/gccompany/gccompany-seven.css
+++ b/gccompany/gccompany-seven.css
@@ -31,10 +31,12 @@
   margin-top: 50px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  gap: 50px;
+  /* justify-content: space-between; */
 }
 
 .seven__contact__box {
+  width: 800px;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -70,6 +72,23 @@
   margin-bottom: 30px;
 }
 
+.seven__Follow__us {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.seven__follow {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  font-weight: 700;
+  color: rgb(100, 100, 100);
+  justify-content: flex-start;
+  gap: 25px;
+  margin-top: 33px;
+}
+
 .seven__contents__brand {
   display: flex;
   gap: 20px;
@@ -78,7 +97,36 @@
 }
 
 .seven__company {
-  font-display: flex;
+  display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 5px;
+  font-size: 12px;
+  color: rgb(100, 100, 100);
+}
+
+.seven__follow__sns {
+  display: flex;
+  gap: 10px;
+}
+.sns__naver {
+  width: 25px;
+  height: 25px;
+}
+
+.sns__naver > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.seven__userinfoRule {
+  font-size: 12px;
+  font-weight: 700;
+  color: rgb(100, 100, 100);
+  border-bottom: 1px solid rgb(100, 100, 100);
+  width: fit-content;
+}
+
+.seven__copyright {
+  font-size: 12px;
 }
